[project]
name = "taskssimulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "loguru>=0.7.3",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
addopts = "-p no:benchmark"
[tool.coverage.report]
exclude_lines = [
    "pass",
    "if __name__ == .__main__.:"
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
[tool.hatch.build.targets.wheel]
packages = ["src"]
[project.scripts]
main = "src.main:give_engine"
