[project]
name = "tasks4"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.5",
    "asyncio>=4.0.0",
    "loguru>=0.7.3",
    "pre-commit>=4.5.1",
    "prompt-toolkit>=3.0.52",
    "pytest>=9.0.3",
]
[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
